# wsprac

./: CHANGELOG.md  Cargo.toml  cliff.toml  deny.toml  message.json
script/: client.py
src/: event_type.rs  lib.rs  main.rs  subscrib_stream.rs
src/event_type/: book_ticker.rs  depth.rs  kline.rs  ticker.rs  trade.rs
