[package]
name = "wsprac"
version = "0.1.0"
edition = "2021"
authors = ["ChimeWu<wujicheng0215@outlook.com>"]
license = "MIT"

[lib]
name = "backpack"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.30"
native-tls = "0.2.12"
rand = "0.8.5"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
rustix = { version = "0.38.34", features = ["event", "net"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
